--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build --turbopack",
         "start": "next start",
         "lint": "eslint",
-        "lint:fix": "eslint --fix ."
+        "lint:fix": "eslint --fix .",
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@radix-ui/react-avatar": "^1.1.10",
