--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-markdown": "^10.1.0",
+        "react-syntax-highlighter": "^16.1.0",
         "remark-gfm": "^4.0.1",
         "tailwind-merge": "^3.3.1",
         "uuid": "^13.0.0",
@@ -42,6 +43,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "eslint": "^9",
         "eslint-config-next": "15.5.6",
         "prettier": "^3.0.0",
