--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
         "react-dom": "19.1.0",
         "react-markdown": "^10.1.0",
         "react-syntax-highlighter": "^16.1.0",
+        "remark-emoji": "^5.0.2",
         "remark-gfm": "^4.0.1",
+        "remark-math": "^6.0.0",
+        "remark-parse": "^11.0.0",
         "tailwind-merge": "^3.3.1",
         "uuid": "^13.0.0",
         "zustand": "^5.0.8"
